subfilter names and run now on active requests page

--- a/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
@@ -28,7 +28,7 @@
                         Deploy time
                     </th>
 
-                    {{#ifInSubFilter 'scheduled' requestsSubFilter}}
+                    {{#ifInSubFilter 'SCHEDULED' requestsSubFilter}}
                         <th data-sort-attribute="request.schedule" class="visible-lg visible-xl">
                             Schedule
                         </th>
@@ -73,7 +73,7 @@
                             {{timestampFromNow requestDeployState.activeDeploy.timestamp}}
                         </td>
 
-                        {{#ifInSubFilter 'scheduled' ../requestsSubFilter}}
+                        {{#ifInSubFilter 'SCHEDULED' ../requestsSubFilter}}
                             <td class="visible-lg visible-xl">
                                 {{ request.schedule }}
                             </td>
@@ -86,7 +86,7 @@
                                 </a>
                             {{/ifEqual}}
                             {{#if canBeRunNow}}
-                                <a data-request-id="{{ request.id }}" data-request-type="{{#if scheduled}}scheduled{{else}}on-demand{{/if}}" data-action="run-now" title="Run now">
+                                <a data-request-id="{{ request.id }}" data-request-type="{{ type }}" data-action="run-now" title="Run now">
                                     <span class="glyphicon glyphicon-flash"></span>
                                 </a>
                             {{/if}}
