data-requests-active-filter for dashboard

--- a/SingularityUI/app/templates/dashboard.hbs
+++ b/SingularityUI/app/templates/dashboard.hbs
@@ -27,7 +27,7 @@
                         </a>
                     </div>
                     <div class="col-md-2">
-                        <a class="big-number-link" href="{{appRoot}}/requests/active/ON_DEAMAND/{{ deployUser }}" data-requests-active-filter="daemon">
+                        <a class="big-number-link" href="{{appRoot}}/requests/active/ON_DEAMAND/{{ deployUser }}" data-requests-active-filter="ON_DEMAND">
                             <div class="well">
                                 <div class="big-number">
                                     <div class="number" data-state-attribute="requests">
@@ -39,7 +39,7 @@
                         </a>
                     </div>
                     <div class="col-md-2">
-                        <a class="big-number-link" href="{{appRoot}}/requests/active/WORKER/{{ deployUser }}" data-requests-active-filter="on-demand">
+                        <a class="big-number-link" href="{{appRoot}}/requests/active/WORKER/{{ deployUser }}" data-requests-active-filter="WORKER">
                             <div class="well">
                                 <div class="big-number">
                                     <div class="number" data-state-attribute="requests">
@@ -51,7 +51,7 @@
                         </a>
                     </div>
                     <div class="col-md-2">
-                        <a class="big-number-link" href="{{appRoot}}/requests/active/SCHEDULED/{{ deployUser }}" data-requests-active-filter="on-demand">
+                        <a class="big-number-link" href="{{appRoot}}/requests/active/SCHEDULED/{{ deployUser }}" data-requests-active-filter="SCHEDULED">
                             <div class="well">
                                 <div class="big-number">
                                     <div class="number" data-state-attribute="requests">
@@ -63,7 +63,7 @@
                         </a>
                     </div>
                     <div class="col-md-2">
-                        <a class="big-number-link" href="{{appRoot}}/requests/active/RUN_ONCE/{{ deployUser }}" data-requests-active-filter="on-demand">
+                        <a class="big-number-link" href="{{appRoot}}/requests/active/RUN_ONCE/{{ deployUser }}" data-requests-active-filter="RUN_ONCE">
                             <div class="well">
                                 <div class="big-number">
                                     <div class="number" data-state-attribute="requests">
@@ -75,7 +75,7 @@
                         </a>
                     </div>
                     <div class="col-md-2">
-                        <a class="big-number-link" href="{{appRoot}}/requests/active/SERVICE/{{ deployUser }}" data-requests-active-filter="scheduled">
+                        <a class="big-number-link" href="{{appRoot}}/requests/active/SERVICE/{{ deployUser }}" data-requests-active-filter="SERVICE">
                             <div class="well">
                                 <div class="big-number">
                                     <div class="number" data-state-attribute="requests">
