--- a/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
@@ -78,10 +78,12 @@
                                 <a data-request-id="{{ request.id }}" data-request-type="{{ type }}" data-action="run-now" title="Run now">
                                     <span class="glyphicon glyphicon-flash"></span>
                                 </a>
+                                {{#ifInSubFilter type 'WORKER,SERVICE'}}
+                                    <a data-request-id="{{ request.id }}" data-action="scale" title="Scale">
+                                        <span class="glyphicon glyphicon-signal"></span>
+                                    </a>
+                                {{/ifInSubFilter}}
                             {{/if}}
-                            <a data-request-id="{{ request.id }}" data-action="scale" title="Scale">
-                                <span class="glyphicon glyphicon-signal"></span>
-                            </a>
                             <a data-request-id="{{ request.id }}" data-action="remove" title="Remove">
                                 <span class="glyphicon glyphicon-trash"></span>
                             </a>
