--- a/SingularityUI/app/templates/taskDetail/taskOverview.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskOverview.hbs
@@ -1,3 +1,6 @@
+{{#if data.decommissioning}}
+    <div class="alert alert-warning" role="alert">This task is running on a decommissioning host and will be replaced soon</div>
+{{/if}}
 {{! Part of taskBase }}
 <header class='detail-header'>
     <div class="row">
