fix padding on slaves/racks empty table

--- a/SingularityUI/app/templates/racks/rack.hbs
+++ b/SingularityUI/app/templates/racks/rack.hbs
@@ -44,5 +44,5 @@
         </tbody>
     </table>
 {{else}}
-    <div class="empty-table-message"><p>No racks</p></div>
+    <div id='empty-table' class="empty-table-message"><p>No racks</p></div>
 {{/if}}
