--- a/SingularityUI/app/templates/slaves/slave.hbs
+++ b/SingularityUI/app/templates/slaves/slave.hbs
@@ -52,5 +52,5 @@
         </tbody>
     </table>
 {{else}}
-    <div class="empty-table-message"><p>No slaves</p></div>
+    <div id='empty-table' class="empty-table-message"><p>No slaves</p></div>
 {{/if}}
