show hostname not id in decommission message

--- a/SingularityUI/app/templates/vex/serverDecomission.hbs
+++ b/SingularityUI/app/templates/vex/serverDecomission.hbs
@@ -5,5 +5,5 @@
 <pre>{{ id }}</pre>
 
 <p>
-	Decommissioning a {{ type }} causes all tasks currently running on it to be rescheduled and executed elsewhere, as new tasks will no longer consider <code>{{ id }}</code> as a valid target for execution. This process may take time as replacement tasks must be considered healthy before old tasks are killed.
+	Decommissioning a {{ type }} causes all tasks currently running on it to be rescheduled and executed elsewhere, as new tasks will no longer consider <code>{{ id }}</code> a valid target for execution. This process may take time as replacement tasks must be considered healthy before old tasks are killed.
 </p>
