make view send hostname properly

--- a/SingularityUI/app/templates/vex/serverRemoveDead.hbs
+++ b/SingularityUI/app/templates/vex/serverRemoveDead.hbs
@@ -2,4 +2,10 @@
 	Are you sure you want to remove this {{ type }}?
 </p>
 
-<pre>{{ id }}</pre>
+<pre>
+    {{#if host }}
+        {{ host }}
+    {{else}}
+        {{ id }}
+    {{/if}}
+</pre>
