--- a/SingularityUI/app/templates/vex/serverDecomission.hbs
+++ b/SingularityUI/app/templates/vex/serverDecomission.hbs
@@ -1,9 +1,14 @@
 <p>
 	Are you sure you want to to decommission this {{ type }}?
 </p>
-
-<pre>{{ id }}</pre>
+<pre>
+    {{#if host }}
+        {{ host }}
+    {{else}}
+        {{ id }}
+    {{/if}}
+</pre>
 
 <p>
-	Decommissioning a {{ type }} causes all tasks currently running on it to be rescheduled and executed elsewhere, as new tasks will no longer consider <code>{{ id }}</code> a valid target for execution. This process may take time as replacement tasks must be considered healthy before old tasks are killed.
+	Decommissioning a {{ type }} causes all tasks currently running on it to be rescheduled and executed elsewhere, as new tasks will no longer consider the {{ type }} with id <code>{{ id }}</code> a valid target for execution. This process may take time as replacement tasks must be considered healthy before old tasks are killed.
 </p>
