--- a/SingularityService/src/main/resources/templates/task.jade
+++ b/SingularityService/src/main/resources/templates/task.jade
@@ -25,7 +25,7 @@ html
           div(style="border-top: 10px solid #df4210; padding: 20px; background: #eee; border-radius: 4px; text-align: center")
             h1(style="font-weight: normal; margin: 0 0 12px; line-height: 1.3") #{ requestId }
             h2(style="font-weight: normal; margin: 0 0 21px; line-height: 1") #{ status }
-            a(style="background: #08c; color: #fff; padding: 10px 20px; display: inline-block; text-decoration: none; font-size: 13px; letter-spacing: .08em; text-transform: uppercase; border-radius: 3px", href="#{ singularityTaskLink }") View task
+            a(style="background: #08c; color: #fff; padding: 10px 20px; display: inline-block; text-decoration: none; font-size: 13px; letter-spacing: .08em; text-transform: uppercase; border-radius: 3px", href="#{ singularity.getSingularityTaskLink(taskId) }") View task
 
         //- Status
         div(style="padding-bottom: 20px")
@@ -63,7 +63,7 @@ html
           if !taskStateFinished
             if !taskStateRunning
               if !taskRan
-                p(style="margin-bottom: 0") <b>Recommended course of action: </b> None. Singularity was not able to launch this task on the desired slave. For further assistance email #{adminEmails}.
+                p(style="margin-bottom: 0") <b>Recommended course of action: </b> None. Singularity was not able to launch this task on the desired slave. For further assistance email #{ adminEmails }.
               else
                 if taskStateFailed
                   p(style="margin-bottom: 0") <b>Recommended course of action: </b> Check Singularity for logs or ssh into the slave.
@@ -79,7 +79,7 @@ html
               th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") Status
               th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") Message
               th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") Time
-            each taskUpdate, i in taskUpdates
+            each taskUpdate, i in singularity.getJadeTaskHistory(taskHistory)
               tr
                 td(style="border: 0; border-collapse: collapse; padding: 12px; color: #444")= taskUpdate.update
                 td(style="border: 0; border-collapse: collapse; padding: 12px; color: #444")= taskUpdate.message
@@ -106,8 +106,9 @@ html
           div(style="padding-bottom: 12px; margin: 15px 0; border-bottom: 1px solid #eee")
             h3(style="margin: 0; font-size: 20px; line-height: 1") Files
           dl(style="margin-bottom: 0")
-            for logTail, logName in logTails
-              dt(style="font-weight: bold; margin: 0 0 9px") #{ logName }
+            for logTail, logPath in logTails
+              dt(style="font-weight: bold; margin: 0 0 9px")
+                a(href="#{ singularity.getSingularityLogLink(logPath, taskId) }") #{ singularity.getFileName(logPath) }
               dd(style="background: #eee; display: block; margin: 0 0 17px; padding: 10px 14px 0 14px; border-radius: 3px")
                 if logTail
                   pre(style="white-space: pre; margin: 0")
@@ -115,4 +116,4 @@ html
                       for line in logTail
                         div(style="font-family: Menlo, Monaco, Consolas, Courier, monospace; white-space: pre; margin-bottom: 12px")= line
                 else
-                  | #{ logName } not available. The task either did not start, output anything, or the slave hosting the log files was unavailable over http.
+                  | #{ logPath } not available. The task either did not start, output anything, or the slave hosting the log files was unavailable over http.
