--- a/SingularityService/src/main/resources/templates/task.jade
+++ b/SingularityService/src/main/resources/templates/task.jade
@@ -109,7 +109,7 @@ html
             for logTail, logPath in logTails
               dt(style="font-weight: bold; margin: 0 0 9px")
                 a(href="#{ singularity.getSingularityLogLink(logPath, taskId) }") #{ singularity.getFileName(logPath) }
-              dd(style="background: #eee; display: block; margin: 0 0 17px; padding: 10px 14px 0 14px; border-radius: 3px")
+              dd(style="background: #eee; display: block; margin: 0 0 17px; padding: 10px 14px 0.1px 14px; border-radius: 3px")
                 if logTail
                   pre(style="white-space: pre; margin: 0")
                     code(style="font-family: Menlo, Monaco, Consolas, Courier, monospace")
