--- a/SingularityService/src/main/resources/templates/request_modified.jade
+++ b/SingularityService/src/main/resources/templates/request_modified.jade
@@ -28,7 +28,8 @@ html
               h2(style="font-weight: normal; margin: 0 0 21px; line-height: 1") has been #{ action } by #{ user }
             else
               h2(style="font-weight: normal; margin: 0 0 21px; line-height: 1") has been #{ action }
-            a(style="background: #08c; color: #fff; padding: 10px 20px; display: inline-block; text-decoration: none; font-size: 13px; letter-spacing: .08em; text-transform: uppercase; border-radius: 3px", href="#{ singularityRequestLink }") View request
+            if singularityRequestLink
+              a(style="background: #08c; color: #fff; padding: 10px 20px; display: inline-block; text-decoration: none; font-size: 13px; letter-spacing: .08em; text-transform: uppercase; border-radius: 3px", href="#{ singularityRequestLink }") View request
 
         div(style="padding-bottom: 20px")
           div(style="padding-bottom: 12px; margin: 15px 0; border-bottom: 1px solid #eee")
