Remove CSS hack, no longer needed.

--- a/SingularityService/src/main/resources/templates/task.jade
+++ b/SingularityService/src/main/resources/templates/task.jade
@@ -113,7 +113,7 @@ html
                   a(href="#{ log.link }") #{ log.file }
                 else
                   #{ log.file }
-              dd(style="background: #eee; display: block; margin: 0 0 17px; padding: 10px 14px 0.1px 14px; border-radius: 3px")
+              dd(style="background: #eee; display: block; margin: 0 0 17px; padding: 10px 14px; border-radius: 3px")
                 if log.log
                   pre(style="white-space: pre; margin: 0")
                     code(style="font-family: Menlo, Monaco, Consolas, Courier, monospace; white-space: pre;")
