fix event propogation, show on active/paused/cooldown too

--- a/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
@@ -26,8 +26,10 @@
                     </th>
 
                     {{#ifInSubFilter 'SCHEDULED' requestsSubFilter}}
-                        <th data-sort-attribute="request.schedule" class="visible-lg visible-xl">
-                            Schedule
+                        <th data-sort-attribute="request.schedule" class="visible-lg visible-xl schedule-header">
+                            <span id="schedule">
+                                Schedule <span class="glyphicon glyphicon-question-sign"/>
+                            </span>
                         </th>
                     {{/ifInSubFilter}}
 
