--- a/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
@@ -31,7 +31,7 @@
                     {{#ifInSubFilter 'SCHEDULED' requestsSubFilter}}
                         <th data-sort-attribute="request.schedule" class="visible-lg visible-xl schedule-header">
                             <span id="schedule">
-                                Schedule
+                                Schedule <span class="glyphicon glyphicon-question-sign"/>
                             </span>
                         </th>
 
