--- a/SingularityUI/app/templates/requestsTable/requestsPausedBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsPausedBody.hbs
@@ -17,11 +17,10 @@
                     </th>
 
                     {{#ifInSubFilter 'SCHEDULED' requestsSubFilter}}
-                        <th data-sort-attribute="request.schedule" class="visible-lg visible-xl">
-                            Schedule
-                            <a data-action="show-quartz" title="Quartz Schedules">
-                                <span class='glyphicon glyphicon-question-sign'></span>
-                            </a>
+                        <th data-sort-attribute="request.schedule" class="visible-lg visible-xl schedule-header">
+                            <span id="schedule">
+                                Schedule <span class="glyphicon glyphicon-question-sign"/>
+                            </span>
                         </th>
                     {{/ifInSubFilter}}
 
