add style and markup for cpu usage

--- a/SingularityUI/app/styles/loader.styl
+++ b/SingularityUI/app/styles/loader.styl
@@ -31,6 +31,12 @@
         &.cushy
             margin-top 3em
             margin-bottom 3em
+    
+    &.inline-left
+        display inline-block
+        margin-right 5px
+
+
 
 .page-loader-with-message
     text-align center
