--- a/SingularityUI/app/styles/colors.styl
+++ b/SingularityUI/app/styles/colors.styl
@@ -2,13 +2,18 @@ $linkBlue = #08c
 
 $beige = #f3efe0
 $grey = #444444
-
+$grey-light = #ededed
+$grey-xtra-light = #f0f0f0
 $red = #e94d4d
 $orange = #df7310
 $yellow = #ffff99
 $green = #48a770
 $blue = #336ca6
+$blue-light = #94b8de
 $purple = #b93c96
 $dark-yellow = #e6e65c
 
 $removeRed = #df6f6f
+
+
+//
